# SignalASI

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json
.github/workflows/: android-runtime-apk.yml  repo-guard.yml  windows-package.yml
apps/android/: .gitignore  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
apps/android/app/src/main/cpp/: CMakeLists.txt  WHISPER_CPP_VERSION.md  whisper_jni.c
apps/android/app/src/main/cpp/whispercpp/ggml/src/ggml-cpu/spacemit/: ime2_kernels.cpp
apps/desktop/: .gitignore  README.md  package-lock.json  package.json
apps/ios/: README.md
docs/architecture/: README.md  android-agent-development-loop.md  android-agent-task-history.md  android-on-device-super-agent.md  android-workflow-execution-history.md  contact-chat-history.md  conversation-context-management.md  mobile-agent-resource-orchestration.md
docs/design/: README.md
docs/operations/: android-runtime-packs.md
docs/product/: AGENT_ADAPTER_PROVIDER_ARCHITECTURE.md  ANDROID_LOCAL_MCP.md  FIVE_YEAR_SUPER_AGENT_ARCHITECTURE.md  GLOBAL_EVENT_PRIVACY_CONTRACT.md  MOBILE_NATIVE_SUPER_AGENT_IMPLEMENTATION.md  MULTI_AGENT_COLLABORATION_ARCHITECTURE.md  PERSONAL_ASI_ACCEPTANCE.md  PERSONAL_MEMORY_EVOLUTION_ARCHITECTURE.md  PRODUCT_REQUIREMENTS.md  README.md  RUN_RECOVERY_PERMISSION_GOVERNANCE.md  SOURCE_REQUIREMENTS_ACCEPTANCE.md  SUPER_AGENT_CORE_REQUIREMENTS.md
docs/protocol/: Desktop-Native-Tool-Execution-v1.md  Phone-Native-Tool-Session-v1.md  README.md  (+2 more)
docs/setup/: README.md
(+654 files in other folders)
